# fydo

./: .env.example  .gitignore  README.md
.github/workflows/: daily.yml
docs/archive/: SPEC_QV_ENGINE_v1_superseded.md
docs/superpowers/plans/: 2026-06-22-fydo-ui.md
docs/superpowers/specs/: 2026-06-22-fydo-ui-design.md
engine/: pyproject.toml  qv_engine_v4.py  run_daily.py  run_live_demo.py
engine/qv/: __init__.py  config.py
engine/qv/brain/: __init__.py  _scoring.py  construct.py  distress.py  price.py  quality.py  signals.py  value.py
engine/qv/data/: __init__.py  feeder.py  fmp_client.py  metrics.py  screener.py  store.py
engine/tests/: capture_oracle_fixture.py  test_construct.py  test_distress.py  test_feeder.py  test_fmp_client.py  test_invariants.py  test_metrics.py  test_parity.py  test_pipeline.py  test_price_parity.py  test_price_properties.py  test_quality_extensions.py  test_screener.py  test_shield_regression.py  test_signals.py  test_store_integration.py  test_value.py
engine/tests/fixtures/: fmp_sample_AAPL.json  oracle_golden_construct.pkl  oracle_golden_price.pkl  oracle_golden_quality.pkl
engine/tests/validation/: README.md  test_gate_survivorship_v2.py  test_shield_fixed_bucket.py  test_shield_structural.py  test_tilt_survivorship.py
supabase/migrations/: 0001_init.sql  0002_universe_audit.sql
